--- a/ebusiness/build.gradle
+++ b/ebusiness/build.gradle
@@ -16,10 +16,14 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-security'
+	//implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.security:spring-security-test'
 	// https://mvnrepository.com/artifact/org.springframework.security/spring-security-config
-	implementation 'org.springframework.security:spring-security-config:3.2.0.RELEASE'
+	implementation 'org.springframework.security:spring-security-config:5.6.0'
+	// https://mvnrepository.com/artifact/org.springframework.security/spring-security-core
+	implementation 'org.springframework.security:spring-security-core:5.6.0'
+	// https://mvnrepository.com/artifact/org.springframework.security/spring-security-web
+	implementation 'org.springframework.security:spring-security-web:5.6.0'
 
 	runtimeOnly 'org.postgresql:postgresql'
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
