feat(rol) - fixed bug related with manytomany insert on composed table

--- a/ebusiness/src/main/resources/application.properties
+++ b/ebusiness/src/main/resources/application.properties
@@ -11,3 +11,11 @@ spring.datasource.password=carlos
 
 logging.file.name = logs/log.log
 logging.level.web = DEBUG
+
+# Logs for show sql sentences
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# Logs with JDBC
+# logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
+# logging.level.org.springframework.jdbc.core.StatementCreatorUtils=TRACE
